--- a/package.json
+++ b/package.json
@@ -1,23 +1,44 @@
 {
-  "name": "book-of-recipes",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "^17.0.5",
-    "@types/react": "^17.0.38",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7",
-    "typescript": "^4.5.4"
-  }
+    "name": "book-of-recipes",
+    "private": true,
+    "scripts": {
+        "dev": "concurrently \"next dev\" \"yarn generate:watch\"",
+        "build": "graphql-codegen && next build",
+        "start": "next start",
+        "lint": "next lint",
+        "generate": "graphql-codegen",
+        "generate:watch": "graphql-codegen --watch"
+    },
+    "dependencies": {
+        "@apollo/client": "^3.5.6",
+        "@graphql-codegen/typescript": "^2.4.1",
+        "@graphql-codegen/typescript-operations": "^2.2.2",
+        "@graphql-codegen/typescript-react-apollo": "^3.2.3",
+        "@graphql-codegen/typescript-resolvers": "^2.4.3",
+        "@types/node": "^17.0.5",
+        "@types/react": "^17.0.38",
+        "apollo-server-micro": "^3.5.0",
+        "deepmerge": "^4.2.2",
+        "graphql": "^16.2.0",
+        "graphql-tag": "^2.12.6",
+        "lodash.isequal": "^4.5.0",
+        "micro": "^9.3.4",
+        "next": "12.0.7",
+        "react": "17.0.2",
+        "react-dom": "17.0.2"
+    },
+    "devDependencies": {
+        "@graphql-codegen/cli": "^2.3.0",
+        "@types/deepmerge": "^2.2.0",
+        "@types/graphql": "^14.5.0",
+        "@types/lodash.isequal": "^4.5.5",
+        "autoprefixer": "^10.4.0",
+        "concurrently": "^7.0.0",
+        "eslint": "8.6.0",
+        "eslint-config-next": "12.0.7",
+        "eslint-config-prettier": "^8.3.0",
+        "postcss": "^8.4.5",
+        "tailwindcss": "^3.0.7",
+        "typescript": "^4.5.4"
+    }
 }
