--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "@graphql-codegen/typescript-operations": "^2.2.2",
         "@graphql-codegen/typescript-react-apollo": "^3.2.3",
         "@graphql-codegen/typescript-resolvers": "^2.4.3",
+        "@mikro-orm/core": "^4.5.10",
+        "@mikro-orm/mongodb": "^4.5.10",
+        "@mikro-orm/reflection": "^4.5.10",
         "@types/node": "^17.0.5",
         "@types/react": "^17.0.38",
         "apollo-server-micro": "^3.5.0",
@@ -25,7 +28,8 @@
         "micro": "^9.3.4",
         "next": "12.0.7",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "reflect-metadata": "^0.1.13"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^2.3.0",
