--- a/package.json
+++ b/package.json
@@ -18,21 +18,25 @@
         "@mikro-orm/core": "^4.5.10",
         "@mikro-orm/mongodb": "^4.5.10",
         "@mikro-orm/reflection": "^4.5.10",
+        "@tailwindcss/forms": "^0.4.0",
+        "@types/bcryptjs": "^2.4.2",
         "@types/node": "^17.0.5",
         "@types/react": "^17.0.38",
         "apollo-server-micro": "^3.5.0",
+        "bcryptjs": "^2.4.3",
+        "classnames": "^2.3.1",
         "deepmerge": "^4.2.2",
         "graphql": "^16.2.0",
         "graphql-tag": "^2.12.6",
+        "hamburger-react": "^2.4.1",
         "lodash.isequal": "^4.5.0",
         "micro": "^9.3.4",
+        "mongodb": "^4.3.1",
         "next": "12.0.7",
+        "next-auth": "^4.1.2",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "reflect-metadata": "^0.1.13",
-        "@tailwindcss/forms": "^0.4.0",
-        "classnames": "^2.3.1",
-        "hamburger-react": "^2.4.1"
+        "reflect-metadata": "^0.1.13"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^2.3.0",
