--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@graphql-codegen/typescript-operations": "^2.2.2",
         "@graphql-codegen/typescript-react-apollo": "^3.2.3",
         "@graphql-codegen/typescript-resolvers": "^2.4.3",
+        "@hookform/resolvers": "^2.8.8",
         "@mikro-orm/core": "^4.5.10",
         "@mikro-orm/mongodb": "^4.5.10",
         "@mikro-orm/reflection": "^4.5.10",
@@ -36,7 +37,9 @@
         "next-auth": "^4.1.2",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "reflect-metadata": "^0.1.13"
+        "react-hook-form": "^7.25.0",
+        "reflect-metadata": "^0.1.13",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^2.3.0",
