--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@graphql-codegen/typescript-operations": "^2.2.2",
         "@graphql-codegen/typescript-react-apollo": "^3.2.3",
         "@graphql-codegen/typescript-resolvers": "^2.4.3",
+        "@headlessui/react": "^1.4.3",
         "@hookform/resolvers": "^2.8.8",
         "@mikro-orm/core": "^4.5.10",
         "@mikro-orm/mongodb": "^4.5.10",
@@ -38,6 +39,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-hook-form": "^7.25.0",
+        "react-simple-star-rating": "^4.0.5",
         "reflect-metadata": "^0.1.13",
         "yup": "^0.32.11"
     },
