--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "book-of-recipes",
     "private": true,
+    "type": "commonjs",
     "scripts": {
         "dev": "concurrently \"next dev\" \"yarn generate:watch\"",
         "build": "graphql-codegen && next build",
@@ -10,13 +11,14 @@
         "generate:watch": "graphql-codegen --watch"
     },
     "dependencies": {
-        "@apollo/client": "^3.5.6",
+        "@apollo/client": "^3.5.8",
         "@graphql-codegen/typescript": "^2.4.1",
         "@graphql-codegen/typescript-operations": "^2.2.2",
         "@graphql-codegen/typescript-react-apollo": "^3.2.3",
         "@graphql-codegen/typescript-resolvers": "^2.4.3",
         "@headlessui/react": "^1.4.3",
         "@hookform/resolvers": "^2.8.8",
+        "@graphql-tools/utils": "^8.6.1",
         "@mikro-orm/core": "^4.5.10",
         "@mikro-orm/mongodb": "^4.5.10",
         "@mikro-orm/reflection": "^4.5.10",
@@ -24,30 +26,36 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/node": "^17.0.5",
         "@types/react": "^17.0.38",
+        "apollo-link-error": "^1.1.13",
         "apollo-server-micro": "^3.5.0",
         "bcryptjs": "^2.4.3",
         "classnames": "^2.3.1",
+        "cookie": "^0.4.1",
         "deepmerge": "^4.2.2",
         "graphql": "^16.2.0",
         "graphql-tag": "^2.12.6",
         "hamburger-react": "^2.4.1",
+        "jsonwebtoken": "^8.5.1",
+        "jwt-decode": "^3.1.2",
         "lodash.isequal": "^4.5.0",
         "micro": "^9.3.4",
         "mongodb": "^4.3.1",
-        "next": "12.0.7",
-        "next-auth": "^4.1.2",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
         "react-hook-form": "^7.25.0",
         "react-simple-star-rating": "^4.0.5",
-        "reflect-metadata": "^0.1.13",
-        "yup": "^0.32.11"
+        "yup": "^0.32.11",
+        "next": "^12.0.10",
+        "next-auth": "^4.2.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "reflect-metadata": "^0.1.13"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^2.3.0",
+        "@types/cookie": "^0.4.1",
         "@types/deepmerge": "^2.2.0",
         "@types/graphql": "^14.5.0",
         "@types/lodash.isequal": "^4.5.5",
+        "@typescript-eslint/eslint-plugin": "^5.10.1",
         "autoprefixer": "^10.4.0",
         "concurrently": "^7.0.0",
         "eslint": "8.6.0",
