--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
         "@graphql-codegen/typescript-operations": "^2.2.2",
         "@graphql-codegen/typescript-react-apollo": "^3.2.3",
         "@graphql-codegen/typescript-resolvers": "^2.4.3",
+        "@graphql-tools/utils": "^8.6.1",
         "@headlessui/react": "^1.4.3",
         "@hookform/resolvers": "^2.8.8",
-        "@graphql-tools/utils": "^8.6.1",
-        "@mikro-orm/core": "^4.5.10",
-        "@mikro-orm/mongodb": "^4.5.10",
-        "@mikro-orm/reflection": "^4.5.10",
+        "@mikro-orm/core": "^5.0.0",
+        "@mikro-orm/mongodb": "^5.0.0",
+        "@mikro-orm/reflection": "^5.0.0",
         "@tailwindcss/forms": "^0.4.0",
         "@types/bcryptjs": "^2.4.2",
         "@types/node": "^17.0.5",
@@ -39,15 +39,14 @@
         "jwt-decode": "^3.1.2",
         "lodash.isequal": "^4.5.0",
         "micro": "^9.3.4",
-        "mongodb": "^4.3.1",
-        "react-hook-form": "^7.25.0",
-        "react-simple-star-rating": "^4.0.5",
-        "yup": "^0.32.11",
         "next": "^12.0.10",
         "next-auth": "^4.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "reflect-metadata": "^0.1.13"
+        "react-hook-form": "^7.25.0",
+        "react-simple-star-rating": "^4.0.5",
+        "reflect-metadata": "^0.1.13",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^2.3.0",
