--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "jwt-decode": "^3.1.2",
         "lodash.isequal": "^4.5.0",
         "micro": "^9.3.4",
+        "mikro-orm": "^5.0.0",
         "next": "^12.0.10",
         "next-auth": "^4.2.0",
         "react": "^17.0.2",
