--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "mikro-orm": "^5.0.0",
         "next": "^12.0.10",
         "next-auth": "^4.2.0",
+        "next-images": "^1.8.4",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.25.0",
