--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     },
     "dependencies": {
         "@apollo/client": "^3.5.8",
+        "@aws-sdk/client-s3": "^3.51.0",
+        "@graphql-codegen/add": "^3.1.1",
         "@graphql-codegen/typescript": "^2.4.1",
         "@graphql-codegen/typescript-operations": "^2.2.2",
         "@graphql-codegen/typescript-react-apollo": "^3.2.3",
@@ -28,18 +30,21 @@
         "@types/react": "^17.0.38",
         "apollo-link-error": "^1.1.13",
         "apollo-server-micro": "^3.5.0",
+        "apollo-upload-client": "^17.0.0",
         "bcryptjs": "^2.4.3",
         "classnames": "^2.3.1",
         "cookie": "^0.4.1",
         "deepmerge": "^4.2.2",
         "graphql": "^16.2.0",
         "graphql-tag": "^2.12.6",
+        "graphql-upload": "^13.0.0",
         "hamburger-react": "^2.4.1",
         "jsonwebtoken": "^8.5.1",
         "jwt-decode": "^3.1.2",
         "lodash.isequal": "^4.5.0",
         "micro": "^9.3.4",
         "mikro-orm": "^5.0.0",
+        "nanoid": "^3.2.0",
         "next": "^12.0.10",
         "next-auth": "^4.2.0",
         "next-images": "^1.8.4",
@@ -52,9 +57,11 @@
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^2.3.0",
+        "@types/apollo-upload-client": "^17.0.0",
         "@types/cookie": "^0.4.1",
         "@types/deepmerge": "^2.2.0",
         "@types/graphql": "^14.5.0",
+        "@types/graphql-upload": "^8.0.10",
         "@types/lodash.isequal": "^4.5.5",
         "@typescript-eslint/eslint-plugin": "^5.10.1",
         "autoprefixer": "^10.4.0",
