--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.25.0",
+        "react-select": "^5.2.2",
         "react-simple-star-rating": "^4.0.5",
         "reflect-metadata": "^0.1.13",
         "yup": "^0.32.11"
