--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/node": "^17.0.5",
         "@types/react": "^17.0.38",
+        "@types/react-dom": "^18.0.3",
         "apollo-link-error": "^1.1.13",
         "apollo-server-micro": "^3.5.0",
         "apollo-upload-client": "^17.0.0",
@@ -39,6 +40,7 @@
         "graphql-tag": "^2.12.6",
         "graphql-upload": "^13.0.0",
         "hamburger-react": "^2.4.1",
+        "i18next": "^21.6.16",
         "jsonwebtoken": "^8.5.1",
         "jwt-decode": "^3.1.2",
         "lodash.isequal": "^4.5.0",
@@ -47,7 +49,9 @@
         "nanoid": "^3.2.0",
         "next": "^12.0.10",
         "next-auth": "^4.2.0",
+        "next-i18next": "^11.0.0",
         "next-images": "^1.8.4",
+        "next-translate": "^1.4.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.25.0",
