feat: add custom resolver directive to work with plugins

--- a/codegen.yml
+++ b/codegen.yml
@@ -31,3 +31,4 @@ generates:
             - "typescript"
             - "typescript-resolvers"
             - "typescript-typedefs.js"
+            - "plugins_out/CustomResolverDirective.js"
