--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
         "build": "graphql-codegen && next build",
         "start": "next start",
         "lint": "next lint",
-        "generate": "graphql-codegen",
-        "generate:watch": "graphql-codegen --watch"
+        "generate": "tsc -p tsconfig.plugins.json && graphql-codegen",
+        "generate:watch": "tsc -p tsconfig.plugins.json && graphql-codegen --watch"
     },
     "dependencies": {
         "@apollo/client": "^3.5.8",
         "@aws-sdk/client-s3": "^3.51.0",
-        "@graphql-codegen/add": "^3.1.1",
+        "@graphql-codegen/add": "^3.2.0",
         "@graphql-codegen/named-operations-object": "^2.2.1",
-        "@graphql-codegen/typescript": "^2.4.1",
-        "@graphql-codegen/typescript-operations": "^2.2.2",
-        "@graphql-codegen/typescript-react-apollo": "^3.2.3",
-        "@graphql-codegen/typescript-resolvers": "^2.4.3",
-        "@graphql-tools/utils": "^8.6.1",
+        "@graphql-codegen/typescript": "^2.7.1",
+        "@graphql-codegen/typescript-operations": "^2.5.1",
+        "@graphql-codegen/typescript-react-apollo": "^3.3.1",
+        "@graphql-codegen/typescript-resolvers": "^2.7.1",
+        "@graphql-tools/utils": "^8.8.0",
         "@headlessui/react": "^1.4.3",
         "@hookform/resolvers": "^2.8.8",
         "@mikro-orm/core": "^5.2.1",
@@ -67,7 +67,7 @@
         "yup": "^0.32.11"
     },
     "devDependencies": {
-        "@graphql-codegen/cli": "^2.3.0",
+        "@graphql-codegen/cli": "^2.8.1",
         "@types/apollo-upload-client": "^17.0.0",
         "@types/cookie": "^0.4.1",
         "@types/deepmerge": "^2.2.0",
@@ -82,6 +82,7 @@
         "eslint-config-prettier": "^8.3.0",
         "postcss": "^8.4.5",
         "tailwindcss": "^3.0.7",
+        "ts-node": "^10.9.1",
         "typescript": "^4.5.4"
     }
 }
